# youbot_ros_control

./: .gitignore
youbot_ros_control/: CMakeLists.txt  package.xml
yrc_arm/: CMakeLists.txt  package.xml
yrc_base/: CMakeLists.txt  base_device_plugin.xml  package.xml
yrc_base/include/yrc_base/: yrc_base.h
yrc_base/src/: yrc_base.cpp
yrc_controllers/: CMakeLists.txt  package.xml
yrc_gripper/: CMakeLists.txt  package.xml
yrc_hardware_interface/: CMakeLists.txt  package.xml
yrc_hardware_interface/include/yrc_hardware_interface/: device_interface.h  omni_base_command_interface.h  omni_base_state_interface.h
yrc_youbot/: CMakeLists.txt  package.xml
yrc_youbot/config/: youbot_controllers.yaml  youbot_hardware_interfaces.yaml
yrc_youbot/launch/: oodl_ros_control.launch
yrc_youbot/src/: oodl_ros.cpp  oodl_ros_control.cpp
